--- a/app/src/main/res/layout/fragment_other.xml
+++ b/app/src/main/res/layout/fragment_other.xml
@@ -11,10 +11,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
+
         android:layout_alignParentBottom="true"
         android:scrollbars="none" >
 
@@ -27,15 +24,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:layout_gravity="center_vertical"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:paddingTop="16dp"
                 android:orientation="horizontal">
 
 
                 <LinearLayout
-                    android:layout_width="150dp"
+                    android:layout_width="6dp"
                     android:layout_height="210dp"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical">
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    tools:ignore="NestedWeights">
 
 
                     <android.support.v7.widget.CardView
@@ -50,9 +53,11 @@
                         <ImageView
                             android:id="@+id/imageView1"
                             android:layout_width="match_parent"
-                            android:layout_marginTop="10dp"
                             android:layout_height="120dp"
                             android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="10dp"
+
+                            android:layout_weight="1"
 
                             android:src="@drawable/iub_app_icon" />
 
@@ -62,8 +67,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
                             android:layout_marginBottom="5dp"
+                            android:layout_weight="1"
                             android:text="Android App"
                             android:textAlignment="center"
+
                             android:textColor="@color/purple_700"
                             android:textStyle="bold"
                             tools:ignore="RtlCompat" />
@@ -73,21 +80,26 @@
                     <Button
                         android:id="@+id/button1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_marginTop="10dp"
-                        android:text="Download" />
+                        android:background="@color/purple_700"
+                        android:text="Download"
+                        android:textColor="@color/hafe_white" />
 
                 </LinearLayout>
 
                 <Space
-                    android:layout_width="20dp"
-                    android:layout_height="match_parent" />
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent"
+                    />
 
 
                 <LinearLayout
-                    android:layout_width="150dp"
+                    android:layout_width="14dp"
                     android:layout_height="210dp"
-                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_gravity="center_horizontal"
+
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
 
@@ -103,11 +115,13 @@
                         <ImageView
                             android:id="@+id/imageView3"
                             android:layout_width="match_parent"
-                            android:layout_marginTop="10dp"
                             android:layout_height="120dp"
                             android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="10dp"
 
-                            android:src="@drawable/iub_app_icon" />
+                            android:layout_weight="1"
+
+                            android:src="@drawable/iub_software_icon" />
 
                         <TextView
                             android:id="@+id/textView11"
@@ -115,7 +129,9 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
                             android:layout_marginBottom="5dp"
-                            android:text="Android App"
+                            android:layout_weight="1"
+                            android:text="Software"
+
                             android:textAlignment="center"
                             android:textColor="@color/purple_700"
                             android:textStyle="bold"
@@ -124,16 +140,155 @@
                     </android.support.v7.widget.CardView>
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/button2"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_marginTop="10dp"
-                        android:text="Download" />
+                        android:background="@color/purple_700"
+                        android:text="Download"
+                        android:textColor="@color/hafe_white"/>
 
                 </LinearLayout>
 
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:paddingTop="16dp"
+                android:orientation="horizontal">
+
+
+                <LinearLayout
+                    android:layout_width="6dp"
+                    android:layout_height="210dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    tools:ignore="NestedWeights">
+
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="150dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="20dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="@color/white"
+                        app:cardCornerRadius="20dp"
+                        app:cardElevation="5dp">
+
+                        <ImageView
+                            android:id="@+id/imageView12"
+                            android:layout_width="match_parent"
+                            android:layout_height="120dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="10dp"
+
+                            android:layout_weight="1"
+
+                            android:src="@drawable/iub_extention_icon" />
+
+                        <TextView
+                            android:id="@+id/textView22"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginBottom="5dp"
+                            android:layout_weight="1"
+                            android:text="Extension"
+                            android:textAlignment="center"
+
+                            android:textColor="@color/purple_700"
+                            android:textStyle="bold"
+                            tools:ignore="RtlCompat" />
+
+                    </android.support.v7.widget.CardView>
+
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/purple_700"
+                        android:text="Download"
+                        android:textColor="@color/hafe_white" />
+
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent"
+                    />
+
+
+                <LinearLayout
+                    android:layout_width="14dp"
+                    android:layout_height="210dp"
+                    android:layout_gravity="center_horizontal"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="150dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="20dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="@color/white"
+                        app:cardCornerRadius="20dp"
+                        app:cardElevation="5dp">
+
+                        <ImageView
+                            android:id="@+id/imageView35"
+                            android:layout_width="match_parent"
+                            android:layout_height="120dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="10dp"
+
+                            android:layout_weight="1"
+
+                            android:src="@drawable/iub_stiker_app_icon" />
+
+                        <TextView
+                            android:id="@+id/textView141"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginBottom="5dp"
+                            android:layout_weight="1"
+                            android:text="Android App"
+
+                            android:textAlignment="center"
+                            android:textColor="@color/purple_700"
+                            android:textStyle="bold"
+                            tools:ignore="RtlCompat" />
+
+                    </android.support.v7.widget.CardView>
+
+                    <Button
+                        android:id="@+id/button4"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/purple_700"
+                        android:text="Download"
+                        android:textColor="@color/hafe_white"/>
+
+                </LinearLayout>
 
             </LinearLayout>
+
+
+
+
+
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
